// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Suggestor /> initial render with no suggestions 1`] = `
<div
  className="input-group"
  onClick={[Function]}
  onKeyDown={[Function]}
  style={undefined}
>
  <input
    className="form-control"
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    title={undefined}
    type="text"
    value=""
  />
  <span
    className="glyphicon glyphicon-triangle-bottom"
    style={
      Object {
        "bottom": 0,
        "color": "#ccc",
        "cursor": "pointer",
        "fontSize": 16,
        "height": 14,
        "margin": "auto",
        "position": "absolute",
        "right": 10,
        "top": 0,
        "zIndex": 4,
      }
    }
  />
  
</div>
`;

exports[`<Suggestor /> initial render with suggestions (open list) 1`] = `
<div
  className="input-group"
  onClick={[Function]}
  onKeyDown={[Function]}
  style={undefined}
>
  <input
    className="form-control"
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    title={undefined}
    type="text"
    value=""
  />
  <span
    className="glyphicon glyphicon-triangle-bottom"
    style={
      Object {
        "bottom": 0,
        "color": "#ccc",
        "cursor": "pointer",
        "fontSize": 16,
        "height": 14,
        "margin": "auto",
        "position": "absolute",
        "right": 10,
        "top": 0,
        "zIndex": 4,
      }
    }
  />
  
  <ul
    className="dropdown-menu"
    style={
      Object {
        "cursor": "pointer",
        "display": "block",
        "maxHeight": 250,
        "minWidth": 30,
        "overflow": "auto",
        "width": "inherit",
      }
    }
  >
    <li
      onClick={[Function]}
      onMouseEnter={[Function]}
      style={
        Object {
          "backgroundColor": "#f5f5f5",
        }
      }
    >
      <a>
        suggest-1
      </a>
    </li>
    <li
      onClick={[Function]}
      onMouseEnter={[Function]}
      style={
        Object {
          "backgroundColor": false,
        }
      }
    >
      <a>
        suggest-2
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Suggestor /> initial render with suggestions 1`] = `
<div
  className="input-group"
  onClick={[Function]}
  onKeyDown={[Function]}
  style={undefined}
>
  <input
    className="form-control"
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    title={undefined}
    type="text"
    value=""
  />
  <span
    className="glyphicon glyphicon-triangle-bottom"
    style={
      Object {
        "bottom": 0,
        "color": "#ccc",
        "cursor": "pointer",
        "fontSize": 16,
        "height": 14,
        "margin": "auto",
        "position": "absolute",
        "right": 10,
        "top": 0,
        "zIndex": 4,
      }
    }
  />
  
</div>
`;
